#1209 Decoupled Indicators from BarSeries
- prepared for event processing
- cleaned api
- extended NumericIndicator factories